couple bugs need to fix post location
