# models.py
@@ -1,12 +1,12 @@
 # models.py
 
+
 from datetime import datetime
 from config import db, ma
 
 follows = db.Table('follows',
                    db.Column('follower_id', db.Integer, db.ForeignKey('user.id'), primary_key=True),
                    db.Column('followed_id', db.Integer, db.ForeignKey('user.id'), primary_key=True))
-
 
 # https://hackmd.io/@jpshafto/H1VbmP3yOclass
 class User(db.Model):
@@ -29,7 +29,22 @@ class User(db.Model):
 
     def __repr__(self):  # return dict format
         return str({"user": self.user, "score": {self.score}, "created": {str(self.date_created)}})
+class Cachelocations(db.Model):
+    __tablename__ = "cache_locations"
+    id = db.Column(db.Integer, primary_key=True)
+    cachename = db.Column(db.String(64))
+    cache_coordinates = db.Column(db.Float(2))
+    hints = db.Column(db.String(256))
+    trivia = db.Column(db.String(256))
+    difficulty = db.Column(db.SmallInteger)
+    radius_accuracy = db.Column(db.Integer)
+    timestamp = db.Column(db.DateTime, default=datetime.utcnow, onupdate=datetime.utcnow)
 
+    def __str__(self):
+        return f"CacheData(Cache: {self.cachename}, Difficulty: {self.difficulty}, Created: {self.timestamp})"
+
+    def __repr__(self):
+        return str({"cache": self.cachename, "difficulty": self.difficulty, "created": {str(self.timestamp)}})
 
 class UserSchema(ma.SQLAlchemyAutoSchema):
     class Meta:
@@ -42,3 +57,14 @@ class UserSchema(ma.SQLAlchemyAutoSchema):
 
 user_schema = UserSchema()
 users_schema = UserSchema(many=True)
+
+class CacheLocationsSchema(ma.SQLAlchemyAutoSchema):
+    class Meta:
+        model = Cachelocations
+        include_fk = True
+        include_relationships = True
+        load_instance = True
+        sqla_session = db.session
+
+cache_location_schema = CacheLocationsSchema()
+cache_locations_schema = CacheLocationsSchema(many=True)
